--- a/scripts/decay_model_expl.Rmd
+++ b/scripts/decay_model_expl.Rmd
@@ -102,6 +102,8 @@ lm_log2_l <- lapply(1:11, FUN = function(i) {
 })
 
 # log-log-lin model, with cohort fixed effects
+# note, time_1 needs to be adjusted in the linear terms, 
+# so that the intercept is (1, 1), since time_1 starts at 1.
 lm_log2_lin_l <- lapply(1:11, FUN = function(i) {
   lm(log(proportion) ~ 0 + log(time_1):cohort + I(time_1 - 1):cohort,  
                data = filter(dat_l, site == site_names[i]))
@@ -170,6 +172,76 @@ names(lm_0_l) <- site_names
 
 
 ```{r plotting-one-site}
+
+# ----------------------- lin-log-lin cohort plot ----------------------- #
+formula(lm_lin_log_lin_l$shaanxi) 
+# I(proportion - 1) ~ 0 + log(time_1):cohort + I(time_1 - 1):cohort
+
+# 
+
+# calculate and extract mean coef estimates:
+site_mn_coef_tmp <- tidy(lm_lin_log_lin_l$shaanxi) %>% 
+  mutate(coef_term = sub(":*cohort....:*", "", term),
+         year_abn = ifelse(coef_term == "log(time_1)", gsub(".*cohort", "", term), parse_number(term)),
+         cohort = as.factor(year_abn)) %>% 
+  group_by(coef_term) %>%
+  summarise(mean_est = mean(estimate, na.rm = TRUE))
+
+
+ggplot(data = filter(dat_l, site == "shaanxi"), 
+       mapping = aes(x = age, y = proportion,
+                     group = year_abn, color = year_abn)) + 
+  geom_point() + scale_color_distiller(palette = "Greens") + 
+  scale_x_continuous(n.breaks = 30) +
+  
+  labs(caption = "I(proportion - 1) ~ 0 + log(time_1):cohort + I(time_1 - 1):cohort") + 
+  geom_line(data = mutate(augment(lm_lin_log_lin_l$shaanxi),
+                          time_1 = exp(`log(time_1)`),
+                          time_1_check = `I(time_1 - 1)` + 1,
+                          age = time_1 + 4,
+                          proportion = .fitted + 1,
+                          year_abn = as.numeric(levels(cohort))[cohort])) + 
+
+  # site mean coefficients: (note, needs to be transformed 4 to the right, so that plotting works)
+  geom_function(fun = function(x) {site_mn_coef_tmp$mean_est[2] * log(x-4) + site_mn_coef_tmp$mean_est[1] * (x - 4 - 1) + 1},
+                mapping = aes(linetype = "Mean Decay Rate"),
+                color = "blue", size = 1, #linetype = "dashed", 
+                inherit.aes = FALSE) +
+  scale_linetype(name = "")
+
+
+
+
+
+
+
+
+
+ggplot(mapping = aes(x = age, y = proportion, group = year_abn, color = year_abn)) + 
+  geom_point(data = filter(dat_l, site == "shaanxi")) + 
+  scale_color_distiller(palette = "Greens") + 
+  scale_x_continuous(n.breaks = 30) + 
+  labs(title = "Decay of abandoned land over time", #subtitle = site_df$description[indx], 
+       caption = "lm formula: log(proportion) ~ 0 + log(time_1):cohort",
+       x = "Time since initial abandonment (years)", y = "Proportion of abandoned land remaining",
+       color = "Cohort (Year \nFirst Abandoned)") + 
+  
+  # add the lm curves, with predictions (this works because the "newdata" df has "age" in it, as well as "time_1")
+  geom_line(data = mutate(augment(lm_log2_l$shaanxi, newdata = filter(dat_l_0, site == "shaanxi")),
+                          proportion = exp(.fitted))) + 
+  
+  # add the mean coefficient (needs to be transformed 4 to the right, so that plotting works)
+  geom_function(fun = function(x) { (x-4) ^ (mean(coef(lm_log2_l$shaanxi), na.rm = TRUE))},
+                mapping = aes(linetype = "Mean Decay Rate"),
+                color = "blue", size = 1, #linetype = "dashed", 
+                inherit.aes = FALSE) +
+  scale_linetype(name = "")
+
+
+
+
+
+
 # ----------------------- log-log cohort plot ----------------------- #
 
 # plot with age on the x-axis
@@ -183,7 +255,7 @@ ggplot(mapping = aes(x = age, y = proportion, group = year_abn, color = year_abn
        color = "Cohort (Year \nFirst Abandoned)") + 
   
   # add the lm curves, with predictions (this works because the "newdata" df has "age" in it, as well as "time_1")
-  geom_line(data = mutate(augment(lm_mod_log2_cohort, newdata = filter(dat_l_0, site == "shaanxi")),
+  geom_line(data = mutate(augment(lm_log2_l$shaanxi, newdata = filter(dat_l_0, site == "shaanxi")),
                           proportion = exp(.fitted))) + 
   
   # add the mean coefficient (needs to be transformed 4 to the right, so that plotting works)
@@ -306,7 +378,7 @@ plot(lm_mod_log2_cohort_plus)
 ```
 
 
-```{r lin-log-test-diag}
+```{r test-diag}
 # diagnostics for all sites
 par(mfrow = c(3, 4))
 for (i in 1:11) plot(lm_log2_lin_l[[i]], 1, main = site_names[i])
@@ -395,31 +467,35 @@ augment(lm(formula = proportion ~ 0 + log(time_1):cohort + time_1:cohort,
   arrange(desc(.fitted)) %>% 
   print(n = 28)
 
-gg_base_s + geom_line(data = 
-                        mutate(
-                          augment(lm(formula = I(proportion - 1) ~ 
-                                       0 + log(time_1):cohort + 
-                                       I(time_1 - 1):cohort, 
-                                       #time:cohort, 
-                                     data = filter(dat_l, site == "shaanxi"))
-                                  ),
-                          time_1 = exp(`log(time_1)`),
-                          proportion = .fitted + 1,
-                          year_abn = as.numeric(levels(cohort))[cohort])
-                      ) + coord_cartesian(xlim = c(0.9, 2), ylim = c(0.975, 1.025))
+gg_base_s + 
+  labs(caption = "I(proportion - 1) ~ 0 + log(time_1):cohort + I(time_1 - 1):cohort") + 
+  geom_line(data =
+              mutate(
+                augment(lm(formula = I(proportion - 1) ~ 
+                             0 + log(time_1):cohort + 
+                             I(time_1 - 1):cohort, 
+                           #time:cohort, 
+                           data = filter(dat_l, site == "shaanxi"))
+                        ),
+                time_1 = exp(`log(time_1)`),
+                proportion = .fitted + 1,
+                year_abn = as.numeric(levels(cohort))[cohort])
+            ) #+ coord_cartesian(xlim = c(0.9, 2), ylim = c(0.975, 1.025))
 
-gg_base_s + geom_line(data = 
-                        mutate(
-                          augment(lm(formula = log(proportion) ~ 
-                                       0 + log(time_1):cohort + 
-                                       I(time_1 - 1):cohort, 
-                                       #time:cohort, 
-                                     data = filter(dat_l, site == "shaanxi"))
-                                  ),
-                          time_1 = exp(`log(time_1)`),
-                          proportion = exp(.fitted),
-                          year_abn = as.numeric(levels(cohort))[cohort])
-                      ) #+ coord_cartesian(xlim = c(0.9, 2), ylim = c(0.975, 1.025))
+gg_base_s + 
+  labs(caption = "log(proportion) ~ 0 + log(time_1):cohort + I(time_1 - 1):cohort") + 
+  geom_line(data = 
+              mutate(
+                augment(lm(formula = log(proportion) ~ 
+                             0 + log(time_1):cohort + 
+                             I(time_1 - 1):cohort, 
+                             #time:cohort, 
+                           data = filter(dat_l, site == "shaanxi"))
+                        ),
+                time_1 = exp(`log(time_1)`),
+                proportion = exp(.fitted),
+                year_abn = as.numeric(levels(cohort))[cohort])
+            ) #+ coord_cartesian(xlim = c(0.9, 2), ylim = c(0.975, 1.025))
 
 
 
@@ -515,10 +591,10 @@ cowplot::plot_grid(
 ```{r AIC}
 mod_ll <- list("lm_log2_l" = lm_log2_l,
                "lm_log2_lin_l" = lm_log2_lin_l,
-               "lm_log2_lin_l_not0" = lm_log2_lin_l_not0,
+               #"lm_log2_lin_l_not0" = lm_log2_lin_l_not0,
                "lm_lin_log_l" = lm_lin_log_l,
                "lm_lin_log_lin_l" = lm_lin_log_lin_l,
-               "lm_lin_log_lin_l_not0" = lm_lin_log_lin_l_not0,
+               #"lm_lin_log_lin_l_not0" = lm_lin_log_lin_l_not0,
                "lm_log2_no_cohort_l" = lm_log2_no_cohort_l,
                "lm_log2_year_abn_l" = lm_log2_year_abn_l,
                "lm_log_lin_l" = lm_log_lin_l,
